# AndroidPdfViewer

./: README.md  build.gradle  settings.gradle
android-pdf-viewer/: build.gradle
android-pdf-viewer/src/main/java/com/github/barteksc/pdfviewer/: RenderingHandler.java
gradle/wrapper/: gradle-wrapper.properties
pdfium-android/: .gitignore  build.gradle
pdfium-android/src/main/java/com/shockwave/pdfium/: PdfDocument.java  PdfiumCore.java
pdfium-android/src/main/jni/: CMakeLists.txt
pdfium-android/src/main/jni/src/: mainJNILib.cpp
sample/: build.gradle
sample/src/main/: AndroidManifest.xml
sample/src/main/java/com/github/barteksc/sample/: PDFViewActivity.java
